# ChangeLog for sys-kernel/raspberrypi-image
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/raspberrypi-image/ChangeLog,v 1.10 2013/08/14 14:38:08 xmw Exp $

*raspberrypi-image-3.10.6_pre-r20130805 (14 Aug 2013)

  14 Aug 2013; Michael Weber <xmw@gentoo.org>
  +raspberrypi-image-3.10.6_pre-r20130805.ebuild,
  -raspberrypi-image-3.10.1_pre-r20130719.ebuild:
  Version bump

*raspberrypi-image-3.10.4_pre-r20130802 (09 Aug 2013)

  09 Aug 2013; Michael Weber <xmw@gentoo.org>
  +raspberrypi-image-3.10.4_pre-r20130802.ebuild:
  Version bump to cross-compiled snapshot

*raspberrypi-image-3.9.11_pre20130801 (01 Aug 2013)

  01 Aug 2013; Michael Weber <xmw@gentoo.org>
  +raspberrypi-image-3.9.11_pre20130801.ebuild:
  Version bump

*raspberrypi-image-3.6.11_p20130730 (01 Aug 2013)

  01 Aug 2013; Michael Weber <xmw@gentoo.org>
  +raspberrypi-image-3.6.11_p20130730.ebuild:
  Version bump

*raspberrypi-image-3.10.1_pre-r20130719 (23 Jul 2013)

  23 Jul 2013; Michael Weber <xmw@gentoo.org>
  +raspberrypi-image-3.10.1_pre-r20130719.ebuild:
  Add self compiled 3.10.1 version.

*raspberrypi-image-3.9.10_pre20130719 (23 Jul 2013)
*raspberrypi-image-3.6.11_p20130722 (23 Jul 2013)

  23 Jul 2013; Michael Weber <xmw@gentoo.org>
  +raspberrypi-image-3.6.11_p20130722.ebuild,
  +raspberrypi-image-3.9.10_pre20130719.ebuild:
  Version bump

*raspberrypi-image-3.9.9999 (23 Jul 2013)
*raspberrypi-image-3.6.9999 (23 Jul 2013)

  23 Jul 2013; Michael Weber <xmw@gentoo.org>
  +raspberrypi-image-3.6.9999.ebuild, +raspberrypi-image-3.9.9999.ebuild,
  -raspberrypi-image-9999.3.6.ebuild, -raspberrypi-image-9999.3.9.ebuild:
  Sanitize versioning scheme.

*raspberrypi-image-9999.3.6 (17 Jul 2013)
*raspberrypi-image-9999.3.9 (17 Jul 2013)
*raspberrypi-image-3.9.10_pre20130715 (17 Jul 2013)

  17 Jul 2013; Michael Weber <xmw@gentoo.org>
  +raspberrypi-image-3.9.10_pre20130715.ebuild,