@@ -5,6 +5,6 @@ HOMEPAGE=https://github.com/raspberrypi/firmware
 KEYWORDS=~arm -*
 LICENSE=GPL-2
 RESTRICT=binchecks mirror strip
-SLOT=3.10.1-raspberrypi-r20130802
+SLOT=3.10.4_pre-r20130802
 SRC_URI=https://dev.gentoo.org/~xmw/raspberrypi-image/raspberrypi-image-3.10.4_pre-r20130802.tar.xz
-_md5_=1abc03372dc20765edc1a5a09fa45357
+_md5_=775eefefd0a38be7937f6d837c3e58a6
