@@ -5,6 +5,6 @@ HOMEPAGE=https://github.com/raspberrypi/firmware
 KEYWORDS=~arm -*
 LICENSE=GPL-2
 RESTRICT=binchecks mirror strip
-SLOT=3.10.6_pre-r20130805
-SRC_URI=https://dev.gentoo.org/~xmw/raspberrypi-image/raspberrypi-image-3.10.6_pre-r20130805.tar.xz
-_md5_=aa20be8ddbd81dff58fbcb189aa0c833
+SLOT=3.10.7_pre-r20130815
+SRC_URI=https://dev.gentoo.org/~xmw/raspberrypi-image/raspberrypi-image-3.10.7_pre-r20130815.tar.xz
+_md5_=232f3c0725789cae149aadfc3cec52b5
