@@ -9,8 +9,10 @@ DIST raspberrypi-firmware-ba8059e890.tar.gz 93890924 SHA256 fadc9c1eae192d214cce
 DIST raspberrypi-firmware-c26501f38b.tar.gz 94624522 SHA256 b122ad9f0dc2e1f2165910083b095212b088f223649967192d9c85c39584703b SHA512 30bca98680f9026b74e361b67c232ba8897589d5b8209706647394995fc485f70bb4ceddb75c7725b700eb05948fb396365179ef62b057f69207827232d29392 WHIRLPOOL 223b3462e634e9286f3f72d92c3ddc783ada9e23c3543f338311ba86627a4406224c7444d6a5aa516e400c048a61ea0d3f068753fae3b7a21dac24a8a831539b
 DIST raspberrypi-image-3.10.4_pre-r20130802.tar.xz 51833888 SHA256 e57b683d93fcfb6c0d9d4c75cb2cd82a594c50e936128c370d5f74723557df46 SHA512 d86cb92b1f5e9f758dad646603f550b53325f252e1cf05a0582749b2921e0626a0c360b08675c7a41a48f0182fc3c4f2604249e9d726c59541a744044a1c5dad WHIRLPOOL 50763baf289e4f8dbec5114cb1ff9397435ab480603787d80fdad539c604ec4cb10afb2525d9574ea02f3a1ad3e23f3a15252b026d42358fb29fecb12ae9905c
 DIST raspberrypi-image-3.10.6_pre-r20130805.tar.xz 51847140 SHA256 4b8f7c02da9eab24b3053150bd70253b20f5eed0450f55ec115410eab4328a86 SHA512 da853d3f0e35efbece772eb3eebba3dd8d092511f8ba59c0adaed669b401c14924ceb2fea32a05c5eff58b6a0dc280667c247041ed685c034510d71d26ffcf04 WHIRLPOOL 5e2cb448a706fb4d207af18861a8ba537fe1668ed34ae345b790df65e62c6149e02610b51f115af16fa277cf64f98a7b616ef7a3728a344b9d313a2958e59f1e
-EBUILD raspberrypi-image-3.10.4_pre-r20130802.ebuild 854 SHA256 4e749300a2a670fb4fd71827891b967d35760889dfb177c8f029c8a03f103f6c SHA512 e01741148c1d346dd2b41053e45456c490b19c3a1a4d14bdafbb969a04d8da66a4364f0590696b7461d1176d6db12a4abeb510800e37b1c0c970f774195b6445 WHIRLPOOL 6b3282bd4bcd73eca03a33fd293cdc6f5ffd9fd27ea19f40d52b377f8a9433dfa30524bc29c1f8d38701214306f2b969d0cd05ba76cbb7abad70f362e8d4f629
-EBUILD raspberrypi-image-3.10.6_pre-r20130805.ebuild 854 SHA256 fd7225f426218123fa033426a72996b18c54837827d075701ebabcde5d2520c4 SHA512 8ea8868d9daa4da704ff0f1e80d44ccea870e4114398672b0fd713a8935a5de72567821436edc8435a04d4269d3994a948bf13fdfac242988e9a62e21e634788 WHIRLPOOL ddd1e52079a5a92e0b73c82fd5c69c8ac267d35aef347c4bac97eb6f62c9bfcf6ab2cecbde96f63846b33ee2bc83f93a719d2a4331eca44c639154b8db3f4ea7
+DIST raspberrypi-image-3.10.7_pre-r20130815.tar.xz 51856812 SHA256 04c9edd8ea1d1b1705dac4bd6d9188250d0d62850061b558f17dc4b5262c9f73 SHA512 b7b5f626de2c9e447c2edab008fb734ee39fd3c180f32ac619d071bb5e59805ac6da85ed9c30f3c62eb116bd7fdc0508ef0225d14b8cc6933dec0b2144dd0e23 WHIRLPOOL a605e369b286a5540e0198bb4fd6076f56a1e37e507c07936961b1ecf20de868dc69bc307fe1a90ab444730a2e476d446972d6689ddceca88778bd9f465007d8
+EBUILD raspberrypi-image-3.10.4_pre-r20130802.ebuild 836 SHA256 0e0acc58cbbb7f4a3a05333b10361513af1b7bbb5c190e2c8d7e9d4c97891bd8 SHA512 62eaaf54bcbfa87adf7d511ee74407f25c2dd49122e40a6b52b57b5f650cf2e6f009a9b38783b926871461f95cd0ab7b065877a6d9f999c241d84a0ec95a0c49 WHIRLPOOL 8f574bd2c737d512cf8d03198bbbf482f4da4761f1621455a06515131cc70a38ffa801f7a60e03a8223f01606659732b2d6d7dcaa46bfaec29e675fcc9720e37
+EBUILD raspberrypi-image-3.10.6_pre-r20130805.ebuild 836 SHA256 d2c581517e575773b3696706a4dc42241b63285cead32299a1109270cce10c80 SHA512 b5ded30158ee429c9004d30bd5657a9b6bd1afac62d1b1512ab6e1488ed401d80dbd8c837fdd4b3be9d209f1e6df91f5e6d86d1da84b827a998cdf81f4300b61 WHIRLPOOL de91b6c20734289f1591d320f5855b414dbbda95692651d762e044fd8e7244602a1f68d1777828086ec6788fe2924f85329b447a4f70d28d249908ef95922ab8
+EBUILD raspberrypi-image-3.10.7_pre-r20130815.ebuild 836 SHA256 734947dcc0ae211c650358099aa492f611be63a9b778de2efb1443b5eeb1da95 SHA512 622d5b6859cba9357fe50b49e7221b508d07293127911c4a1b24e8ae501bb6714a0a487e0af4420233ce6bc178a190bf63bced2453524ff25a3314288e5727c4 WHIRLPOOL 0c762691fb5fe539c5c3c7d848ac265625a4d00facdc2178e8746234447f12a7d2e7390d21ce7478852fb36eaea7a45abdc5ffc77c1408042b3d8d11dd213758
 EBUILD raspberrypi-image-3.6.11_p20130711.ebuild 1092 SHA256 b809570793b0292b0399bba277fc407030dc3b543df499671850c5be1054d5f3 SHA512 7c44ace41a2ad53ddf140c2e2fce98258a4e50a388e38edc9c391cd1b9a5fdbf56e1c98212fbead60b90756a3b8d6b7384bf135f43c2e9f8c884d4bf5137f0c5 WHIRLPOOL 2a46fc8d2fb40ab3328b60f465914d7eb4c3e262b79c8115334210e06ae3687a744c5887d43c2989b30c58f455394efa958f40ec529d1c1dacc04cb036a7ec6b
 EBUILD raspberrypi-image-3.6.11_p20130722.ebuild 1092 SHA256 d4f13b57dbf8d74208e5e68f188ffb32f122aec47c9e52d2890255744a374493 SHA512 6217aaf6ea336d1621400221871695f5e929733bcf2baf0933ddfd4a7f5e1254bf8290903cd298abd9162e5462499e486a19605a4189fe0044a55057ec687e8a WHIRLPOOL c845caf69e807ae4df3f8393547ec8ffc91d51b0cb8d785e19ca09c3ac2c7a2c6460e72a31ba52420404caba265535552bca8837fe839327480fedd9cd17a821
 EBUILD raspberrypi-image-3.6.11_p20130730.ebuild 1092 SHA256 bf0540e3693dabdd9a9da080dea4852fad500ea93ce45e8ec0aa3c6ef30425e3 SHA512 4706b925f9209b65e116e4e0196e9bd7ffb5938b81a1bbd11c0322e61c6f23f8456b41118cbc09794a76a04819816a88ab9f18ab479e99eb083a870eb124fad3 WHIRLPOOL bc383ff0172b1296e6d3f518a2d3cc399d9722b0770c2e4ad9f751b167694684f9255be682b6de6b2d2e25158a3fb6dfc646b0a02054d04870cf31a1969305b8
@@ -19,12 +21,12 @@ EBUILD raspberrypi-image-3.9.10_pre20130715.ebuild 1094 SHA256 7ffea4919eafb31f0
 EBUILD raspberrypi-image-3.9.10_pre20130719.ebuild 1094 SHA256 c04059a890a3d05e2a8d31f8e5a64383c25d464c9fc2e51a40f5f93020ea642a SHA512 d5d9a409ff2f5bfb5aefe9bcee180dae6811dc5d5faf642727f07d748b2e20a4f374d71a8936f62c82c8d7578d6ef8e611c87c0b4bf506a74a1814be22c4f56b WHIRLPOOL f8b92ca3d616ea8a63817f31f26896808d9d3022a0def54b4e12fd382c06adabd37842e3b2e961315fb0bd4373bc459c9c834dea1377450607f248bec3086735
 EBUILD raspberrypi-image-3.9.11_pre20130801.ebuild 1094 SHA256 efd9365ad28e758fa51b9adf306ce7ab9c8484c4a321eedc5b92ef52dfddf2c3 SHA512 bad35c6eef8a89571421b912316623f81af61a52342a422f59cb9e1c80e1aa2dab18ea125ce610df210060f25a5081973caf7aaddb35e21613952da798194b6b WHIRLPOOL 45d98c4e63fd91b81bde7a2507e57a9ae57f7d8ff06164c34159d9a698f53d23f0a2e5aa79c579ab3129c8b2fdc2cf38d28f3c41035e20944c68250434880517
 EBUILD raspberrypi-image-3.9.9999.ebuild 1061 SHA256 afcdeb91debb7749168e1ab4db6c5ddcaf01d98ea59d43536636796c92773bb6 SHA512 ea3826f3932a27d9cef7d06f2fa065ed25581ea3e746a0f4e9c2e01fbd078ccc7c887ae0480baf009ebe55e5d96c487a589cff13215be67ce010f54d9d3ccc76 WHIRLPOOL 23eac0e38e6317d43e5c217c4ecced6f0e0c835671fe3797c1e82610fbbc7d5d2c3a9ed470969f915f7df4ae80a0ea54c42b0b8ea7ce733a10af45f56bd4babe
-MISC ChangeLog 2497 SHA256 3b083cb0ae406c97fd4a6cc6a2c4b14edcaa0752bd319c244f83cc99c98ddf3a SHA512 2eb46570e1c573e97f2818f937df6b78baa210eb126a79e7c0eadcb5b78b044fd824371b6a079bc0e049edc814af785f63f21d2442e03ecd8543fca0b23fb44d WHIRLPOOL d1d4b1f4283a6156070a06fa7b18cc99cf23ff6fdb1f69c81de264b7ca41a89e719704389e1b0988fdbe94cbab306bf3fe645b1d26baa489d994870a0c9d0d4b
+MISC ChangeLog 2776 SHA256 08e63c2e94066c9e08281bef21cd64a3d557a3c35c0018f9f6a290ac0fde6661 SHA512 0d8de94a625c848c7263150c0e94b85f654569241a95bd28e5dd5b697b6f0fc8897a6312981fbe9fbe3374e7874c40a4a2e9e1ecba54d8ac09a29e641e6ba1a5 WHIRLPOOL 3f4f3b260d534dc622690a6d9e68bbe9ebd90fdf15a45efb540e1c34faa408634341d9f4fd0f6892ddb1aaad82a4ac6af2234e09d282f329142b579f10daf9fd
 MISC metadata.xml 223 SHA256 89097f936927d56068988263e382edb683f359b27293955708e9ade4d256220d SHA512 c9f6a48b2aa05afdf73b8bd824c65480d76e54b659ca39928398c66f764d34faf186255d8aea034737424a962cf35151b610d078a01f8193b027c63e1e3c51b5 WHIRLPOOL 1ce20c98a7e177b8f510ef41f3935b0db5e04b2ecf465a683b2f2515f6a3043c33e6e9efc87f5aaaf59b2ed9be376d9d16bc8beff66b11aaa50ea899bfdc1f62
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlILllEACgkQknrdDGLu8JAxkAD6AnueY1SdX4co8t9eiD5Vz5uT
-jAlTFxhTomTUxopdzOcA/j27ZbpIibsOT8ODeD4+StgTJ1Id7vZuEH5cTV8Z9PGd
-=4IEM
+iF4EAREIAAYFAlISrE4ACgkQknrdDGLu8JA1FQD8Cx9Sh2I7aZTQBodRLocLOdBo
+9qqj0wGYRA7LpC18tYkA/ilhxj7mQdscqlRumjDns3QHq9/QzjPJYo8eUKF00u5I
+=1c1f
 -----END PGP SIGNATURE-----
