@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/raspberrypi-image/raspberrypi-image-3.10.4_pre-r20130802.ebuild,v 1.2 2013/08/19 23:37:49 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/raspberrypi-image/raspberrypi-image-3.10.7_pre-r20130815.ebuild,v 1.1 2013/08/19 23:37:49 xmw Exp $
 
 EAPI=5
 
